// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=0 iteration=1 1`] = `"0"`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=20 iteration=1 1`] = `
"1
---0"
`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=20 iteration=2 1`] = `"0"`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=50 iteration=1 1`] = `
"1
---0"
`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=50 iteration=2 1`] = `
"3
---0
---1
------0
---2
------0
------1
---------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=50 iteration=3 1`] = `
"3
---0
---1
------0
---2
------0
------1
---------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=50 iteration=4 1`] = `
"4
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=50 iteration=5 1`] = `
"3
---0
---1
------0
---2
------0
------1
---------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=100 iteration=1 1`] = `
"5
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0
---4
------0
------2
---------0
---------1
------------0
------3
---------0
---------1
------------0
---------2
------------0
------------1
---------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.scaleLinearly size=100 iteration=2 1`] = `
"4
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=0 iteration=1 1`] = `
"5
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0
---4
------0
------2
---------0
---------1
------------0
------3
---------0
---------1
------------0
---------2
------------0
------------1
---------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=20 iteration=1 1`] = `
"5
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0
---4
------0
------2
---------0
---------1
------------0
------3
---------0
---------1
------------0
---------2
------------0
------------1
---------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=20 iteration=2 1`] = `
"4
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=50 iteration=1 1`] = `
"5
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0
---4
------0
------2
---------0
---------1
------------0
------3
---------0
---------1
------------0
---------2
------------0
------------1
---------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=50 iteration=2 1`] = `
"4
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=50 iteration=3 1`] = `
"7
---0
---3
------0
------1
---------0
------2
---------0
---------1
------------0
---5
------0
------2
---------0
---------1
------------0
------3
---------0
---------1
------------0
---------2
------------0
------------1
---------------0
------4
---------0
---------2
------------0
------------1
---------------0
---------3
------------0
------------1
---------------0
------------2
---------------0
---------------1
------------------0
---6
------0
------3
---------0
---------1
------------0
---------2
------------0
------------1
---------------0
------4
---------0
---------2
------------0
------------1
---------------0
---------3
------------0
------------1
---------------0
------------2
---------------0
---------------1
------------------0
------5
---------0
---------2
------------0
------------1
---------------0
---------3
------------0
------------1
---------------0
------------2
---------------0
---------------1
------------------0
---------4
------------0
------------2
---------------0
---------------1
------------------0
------------3
---------------0
---------------1
------------------0
---------------2
------------------0
------------------1
---------------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=50 iteration=4 1`] = `
"1
---0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=50 iteration=5 1`] = `
"1
---0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=100 iteration=1 1`] = `
"5
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0
---4
------0
------2
---------0
---------1
------------0
------3
---------0
---------1
------------0
---------2
------------0
------------1
---------------0"
`;

exports[`Regression tests: scaleMode=naturalNumber.unscaled size=100 iteration=2 1`] = `
"4
---0
---2
------0
------1
---------0
---3
------0
------1
---------0
------2
---------0
---------1
------------0"
`;
